CREATE TYPE "user_role" AS ENUM (
  'ADMIN',
  'EMPLOYER',
  'JOB_SEEKER'
);

CREATE TYPE "location_types" AS ENUM (
  'REMOTE',
  'HYBRID',
  'ON_SITE'
);

CREATE TYPE "company_status" AS ENUM (
  'PENDING',
  'APPROVED',
  'REJECTED',
  'SUSPENDED'
);

CREATE TYPE "job_status" AS ENUM (
  'DRAFT',
  'PENDING_APPROVAL',
  'ACTIVE',
  'EXPIRED',
  'REJECTED'
);

CREATE TYPE "employment_type" AS ENUM (
  'FULL_TIME',
  'PART_TIME',
  'CONTRACT'
);

CREATE TYPE "experience_level" AS ENUM (
  'NOT_REQUIRED',
  'INTERN',
  'JUNIOR',
  'MID',
  'SENIOR',
  'LEAD'
);

CREATE TYPE "application_status" AS ENUM (
  'PENDING',
  'REVIEWING',
  'INTERVIEW',
  'HIRED',
  'REJECTED'
);

CREATE TYPE "notification_type" AS ENUM (
  'APPLICATION_STATUS_CHANGED',
  'APPLICATION_RECEIVED',
  'JOB_STATUS_CHANGED',
  'COMPANY_STATUS_CHANGED',
  'COMPANY_PENDING_REVIEW',
  'JOB_PENDING_REVIEW'
);

CREATE TYPE "report_reason" AS ENUM (
  'SPAM',
  'SCAM',
  'INAPPROPRIATE',
  'OTHER'
);

CREATE TYPE "report_status" AS ENUM (
  'PENDING',
  'DISMISSED',
  'RESOLVED'
);

CREATE EXTENSION IF NOT EXISTS "pgcrypto";

CREATE TABLE "users" (
  "id" uuid PRIMARY KEY DEFAULT (gen_random_uuid()),
  "email" varchar(255) UNIQUE NOT NULL,
  "password" varchar(255) NOT NULL,
  "role" user_role NOT NULL,
  "is_active" bool NOT NULL DEFAULT true,
  "created_at" timestamptz NOT NULL DEFAULT (now())
);

CREATE TABLE "refresh_tokens" (
  "id" uuid PRIMARY KEY DEFAULT (gen_random_uuid()),
  "user_id" uuid NOT NULL,
  "token_string" text UNIQUE NOT NULL,
  "expires_at" timestamptz NOT NULL,
  "is_revoked" bool NOT NULL DEFAULT false,
  "created_at" timestamptz NOT NULL DEFAULT (now())
);

CREATE TABLE "profiles" (
  "id" uuid PRIMARY KEY DEFAULT (gen_random_uuid()),
  "user_id" uuid UNIQUE NOT NULL,
  "full_name" varchar(100) NOT NULL,
  "phone" varchar(15) NOT NULL,
  "avatar_url" text,
  "updated_at" timestamptz NOT NULL DEFAULT (now())
);

CREATE TABLE "job_seeker_details" (
  "profile_id" uuid PRIMARY KEY,
  "cv_file_url" text UNIQUE
);

CREATE TABLE "company_employer_details" (
  "profile_id" uuid PRIMARY KEY,
  "company_id" uuid NOT NULL,
  "role_in_company" varchar(50)
);

CREATE TABLE "skills" (
  "id" int GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "name" varchar(100) UNIQUE NOT NULL
);

CREATE TABLE "job_seeker_skills" (
  "job_seeker_id" uuid NOT NULL,
  "skill_id" int NOT NULL,
  PRIMARY KEY ("job_seeker_id", "skill_id")
);

CREATE TABLE "companies" (
  "id" uuid PRIMARY KEY DEFAULT (gen_random_uuid()),
  "company_name" varchar(100) UNIQUE NOT NULL,
  "slug" varchar(255) UNIQUE NOT NULL,
  "address" text NOT NULL,
  "description" text,
  "website" varchar(255),
  "logo_url" text,
  "email" varchar(255) UNIQUE NOT NULL,
  "phone" varchar(15) NOT NULL,
  "status" company_status NOT NULL DEFAULT 'PENDING',
  "is_approved" bool NOT NULL DEFAULT false,
  "created_at" timestamptz NOT NULL DEFAULT (now()),
  "approved_at" timestamptz
);

CREATE TABLE "jobs" (
  "id" uuid PRIMARY KEY DEFAULT (gen_random_uuid()),
  "company_id" uuid NOT NULL,
  "category_id" int NOT NULL,
  "title" varchar(255) NOT NULL,
  "slug" varchar(255) UNIQUE NOT NULL,
  "description" text NOT NULL,
  "requirements" text,
  "benefits" text,
  "number_of_openings" int DEFAULT 1,
  "salary_min" numeric(12,2),
  "salary_max" numeric(12,2),
  "currency" varchar(10) DEFAULT 'VND',
  "location" varchar(255),
  "location_types" location_types NOT NULL,
  "employment_type" employment_type NOT NULL,
  "experience_level" experience_level NOT NULL,
  "status" job_status NOT NULL DEFAULT 'DRAFT',
  "posted_date" timestamptz DEFAULT 'now()',
  "expiration_date" timestamptz,
  "created_at" timestamptz NOT NULL DEFAULT (now()),
  "updated_at" timestamptz NOT NULL DEFAULT (now())
);

CREATE TABLE "job_skills" (
  "job_id" uuid,
  "skill_id" int,
  PRIMARY KEY ("job_id", "skill_id")
);

CREATE TABLE "job_category" (
  "id" int GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "name" varchar(100) UNIQUE NOT NULL
);

CREATE TABLE "applications" (
  "id" uuid PRIMARY KEY DEFAULT (gen_random_uuid()),
  "candidate_id" uuid NOT NULL,
  "job_id" uuid NOT NULL,
  "status" application_status NOT NULL DEFAULT 'PENDING',
  "cover_letter" text,
  "applied_at" timestamptz NOT NULL DEFAULT 'now()'
);

CREATE TABLE "application_status_logs" (
  "id" uuid PRIMARY KEY DEFAULT (gen_random_uuid()),
  "application_id" uuid NOT NULL,
  "status" application_status NOT NULL,
  "changed_by" uuid NOT NULL,
  "changed_at" timestamptz NOT NULL DEFAULT (now()),
  "note" text
);

CREATE TABLE "notifications" (
  "id" uuid PRIMARY KEY DEFAULT (gen_random_uuid()),
  "user_id" uuid NOT NULL,
  "type" notification_type NOT NULL,
  "entity_id" uuid NOT NULL,
  "message" text NOT NULL,
  "created_at" timestamptz NOT NULL DEFAULT (now()),
  "read_at" timestamptz
);

CREATE TABLE "reports" (
  "id" uuid PRIMARY KEY DEFAULT (gen_random_uuid()),
  "job_id" uuid,
  "company_id" uuid,
  "reported_by" uuid,
  "reason" report_reason NOT NULL,
  "details" text,
  "status" report_status NOT NULL DEFAULT 'PENDING',
  "reviewed_by" uuid,
  "reviewed_at" timestamptz,
  "created_at" timestamptz NOT NULL DEFAULT (now())
);

CREATE UNIQUE INDEX ON "applications" ("candidate_id", "job_id");

COMMENT ON COLUMN "users"."is_active" IS 'Dể quản trị viên khóa tài khoản';

COMMENT ON COLUMN "job_seeker_details"."cv_file_url" IS 'Lưu trữ URL tới file PDF CV';

COMMENT ON COLUMN "company_employer_details"."profile_id" IS 'Khóa chính kiêm khóa ngoại 1:1 với profile';

COMMENT ON COLUMN "company_employer_details"."company_id" IS 'Liên kết HR với công ty của họ';

COMMENT ON COLUMN "companies"."approved_at" IS 'Thời điểm Quản trị viên phê duyệt công ty lên hệ thống. NULL nếu chưa từng được duyệt.';

COMMENT ON COLUMN "jobs"."number_of_openings" IS 'Số lượng cần tuyển';

COMMENT ON COLUMN "job_category"."name" IS 'e.g., Software Engineering, Marketing, Design';

COMMENT ON COLUMN "application_status_logs"."changed_by" IS 'Employer hoặc Admin';

COMMENT ON COLUMN "notifications"."read_at" IS 'Giá trị NULL nghĩa là chưa đọc. Lưu thời gian chính xác khi người dùng mở thông báo để tính số lượng thông báo chưa đọc trên giao diện.';

COMMENT ON TABLE "reports" IS 'Yêu cầu CHECK constraint ở DB: (job_id IS NOT NULL AND company_id IS NULL) OR (job_id IS NULL AND company_id IS NOT NULL)';

COMMENT ON COLUMN "reports"."job_id" IS 'Target 1: FK to jobs.id';

COMMENT ON COLUMN "reports"."company_id" IS 'Target 2: FK to companies.id';

COMMENT ON COLUMN "reports"."reported_by" IS 'profiles.id của người báo cáo, NULL nếu tài khoản người báo cáo đã bị xóa';

COMMENT ON COLUMN "reports"."details" IS 'Mô tả chi tiết từ người report';

COMMENT ON COLUMN "reports"."reviewed_by" IS 'users.id của admin xử lý';

ALTER TABLE "profiles" ADD FOREIGN KEY ("user_id") REFERENCES "users" ("id") ON DELETE CASCADE DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "refresh_tokens" ADD FOREIGN KEY ("user_id") REFERENCES "users" ("id") ON DELETE CASCADE DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "profiles" ADD FOREIGN KEY ("id") REFERENCES "job_seeker_details" ("profile_id") ON DELETE CASCADE DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "profiles" ADD FOREIGN KEY ("id") REFERENCES "company_employer_details" ("profile_id") ON DELETE CASCADE DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "company_employer_details" ADD FOREIGN KEY ("company_id") REFERENCES "companies" ("id") ON DELETE CASCADE DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "jobs" ADD FOREIGN KEY ("company_id") REFERENCES "companies" ("id") ON DELETE CASCADE DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "job_seeker_skills" ADD FOREIGN KEY ("skill_id") REFERENCES "skills" ("id") ON DELETE CASCADE DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "job_seeker_skills" ADD FOREIGN KEY ("job_seeker_id") REFERENCES "job_seeker_details" ("profile_id") ON DELETE CASCADE DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "job_skills" ADD FOREIGN KEY ("job_id") REFERENCES "jobs" ("id") ON DELETE CASCADE DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "job_skills" ADD FOREIGN KEY ("skill_id") REFERENCES "skills" ("id") ON DELETE CASCADE DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "jobs" ADD FOREIGN KEY ("category_id") REFERENCES "job_category" ("id") ON DELETE RESTRICT DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "applications" ADD FOREIGN KEY ("candidate_id") REFERENCES "profiles" ("id") ON DELETE CASCADE DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "applications" ADD FOREIGN KEY ("job_id") REFERENCES "jobs" ("id") ON DELETE CASCADE DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "application_status_logs" ADD FOREIGN KEY ("application_id") REFERENCES "applications" ("id") ON DELETE CASCADE DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "application_status_logs" ADD FOREIGN KEY ("changed_by") REFERENCES "users" ("id") ON DELETE RESTRICT DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "notifications" ADD FOREIGN KEY ("user_id") REFERENCES "users" ("id") ON DELETE CASCADE DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "reports" ADD FOREIGN KEY ("reported_by") REFERENCES "users" ("id") ON DELETE SET NULL DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "reports" ADD FOREIGN KEY ("job_id") REFERENCES "jobs" ("id") ON DELETE CASCADE DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "reports" ADD FOREIGN KEY ("company_id") REFERENCES "companies" ("id") ON DELETE CASCADE DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "reports" ADD FOREIGN KEY ("reviewed_by") REFERENCES "users" ("id") ON DELETE SET NULL DEFERRABLE INITIALLY IMMEDIATE;
