// Use DBML to define your database structure
// Docs: https://dbml.dbdiagram.io/docs
//
// IMPORTANT: After V17 migration, all enum-type columns were converted
// from PostgreSQL native enums to VARCHAR(255). The enum blocks below
// serve as documentation of valid values; in the actual database every
// "enum" column is VARCHAR(255).

// --- ENUM REFERENCE (stored as VARCHAR(255) in DB) ---

enum user_role {
  ADMIN       // Quản trị viên
  EMPLOYER    // Nhà tuyển dụng
  CANDIDATE   // Người tìm việc
}

enum location_types {
  REMOTE      // Làm việc từ xa (không cần đến văn phòng)
  HYBRID      // Làm việc từ xa và tại văn phòng
  ONSITE     // Làm việc trực tiếp tại văn phòng hoặc địa điểm công ty
}

enum company_status {
  PENDING     // Chờ duyệt
  APPROVED    // Đã duyệt (Hiện thị công khai)
  REJECTED    // Từ chối phê duyệt
  SUSPENDED   // Bị khóa/Đình chỉ do vi phạm
}

enum job_status {
  DRAFT             // Bản nháp, chưa gửi duyệt hoặc chưa công khai
  PENDING_APPROVAL  // Đang chờ phê duyệt
  ACTIVE            // Đang hoạt động, hiển thị cho ứng viên
  EXPIRED           // Đã hết hạn đăng tuyển
  REJECTED          // Bị từ chối phê duyệt
}

enum employment_type {
  FULL_TIME   // Toàn thời gian
  PART_TIME   // Bán thời gian
  CONTRACT    // Hợp đồng / freelance
}

enum experience_level {
  NOT_REQUIRED  // Không yêu cầu kinh nghiệm
  INTERN        // Thực tập sinh
  JUNIOR        // Nhân viên mới / ít kinh nghiệm
  MID           // Nhân viên có kinh nghiệm trung cấp
  SENIOR        // Nhân viên cấp cao
  LEAD          // Trưởng nhóm / Dẫn dắt kỹ thuật
}

enum application_status {
  PENDING     // Đã nộp, đang chờ xử lý
  REVIEWING   // Đang được xem xét
  INTERVIEW   // Đang trong quá trình phỏng vấn
  HIRED       // Được tuyển dụng
  REJECTED    // Bị từ chối
  WITHDRAWN   // Ứng viên đã rút đơn, có thể nộp lại
}

enum notification_type {
  // Dành cho ứng viên
  APPLICATION_STATUS_CHANGED  // Trạng thái hồ sơ ứng tuyển đã thay đổi: Đang xem xét / Phỏng vấn / Được tuyển / Bị từ chối

  // Dành cho nhà tuyển dụng
  APPLICATION_RECEIVED        // Có ứng viên mới nộp hồ sơ vào tin tuyển dụng
  JOB_STATUS_CHANGED          // Tin tuyển dụng đã được quản trị viên phê duyệt hoặc từ chối
  COMPANY_STATUS_CHANGED      // Công ty đã được phê duyệt, từ chối hoặc tạm ngưng hoạt động

  // Dành cho quản trị viên
  COMPANY_PENDING_REVIEW      // Có công ty mới đăng ký và đang chờ phê duyệt
  JOB_PENDING_REVIEW          // Có tin tuyển dụng mới được gửi lên để phê duyệt
}

// Báo cáo
enum report_reason {
  SPAM          // Tin rác, quảng cáo
  SCAM          // Lừa đảo, thu phí ứng viên
  INAPPROPRIATE // Nội dung phản cảm, sai sự thật
  OTHER         // Khác
}

enum report_status {
  PENDING       // Chờ admin xem xét
  REVIEWED      // Admin đã xem, đang xử lý
  DISMISSED     // Admin bỏ qua, không vi phạm
  RESOLVED      // Admin đã xử lý (khóa, từ chối)
}

enum proficient_level {
  BEGINNER       // Sơ cấp — có thể làm việc được với sự hướng dẫn
  INTERMEDIATE   // Trung cấp — làm việc độc lập trong hầu hết tác vụ
  ADVANCED       // Cao cấp — thành thạo, có thể hướng dẫn người khác
  EXPERT         // Chuyên gia — hiểu sâu, thiết kế giải pháp, giải quyết vấn đề phức tạp
}

enum review_reason {
  NEW_COMPANY   // Công ty mới đăng ký
  INFO_UPDATED  // Công ty đã duyệt nhưng vừa cập nhật thông tin
}

// --- TABLES ---

// Xác thực & Người dùng
Table users {
  id uuid [primary key, default: `gen_random_uuid()`]
  email varchar(255) [unique, not null]
  password varchar(255) [not null]
  role varchar(255) [not null, note: 'Java enum UserRole: ADMIN, EMPLOYER, CANDIDATE']
  is_active bool [not null, default: true, note: 'Để quản trị viên khóa tài khoản']
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]
}

Table refresh_tokens {
  id uuid [primary key, default: `gen_random_uuid()`]
  user_id uuid [not null]
  token_string text [unique, not null]
  expires_at timestamptz [not null]
  is_revoked bool [default: false, not null]
  created_at timestamptz [not null, default: `now()`]
}

// --- SUPERTYPE (Identity) — @MapsId: profiles.user_id = users.id, không có id riêng ---
Table profiles {
  user_id uuid [primary key, note: "Khóa chính kiêm khóa ngoại 1:1 với users.id"]
  full_name varchar(100) [not null]
  phone varchar(15) [not null]
  avatar_url text
  updated_at timestamptz [not null, default: `now()`]
}

// --- SUBTYPES (Domain specific details) ---
Table candidate_details {
  profile_id uuid [primary key]
}

Table company_employer_details {
  profile_id uuid [primary key, note: "Khóa chính kiêm khóa ngoại 1:1 với profile"]
  company_id uuid [not null, note: "Liên kết HR với công ty của họ"]
  role_in_company varchar(50)
}

// Kỹ năng tham chiếu (dùng chung cho ứng viên và tin tuyển dụng)
Table skills {
  id int [primary key, default: `gen_identity()`]
  name varchar(100) [not null, unique]
  is_active bool [not null, default: true]
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]
}

Table candidate_skills {
  candidate_id uuid [not null]
  skill_id int [not null]
  proficient_level varchar(255) [not null, default: 'BEGINNER', note: 'Java enum ProficientLevel: BEGINNER, INTERMEDIATE, ADVANCED, EXPERT']
  indexes {
    (candidate_id, skill_id) [pk]
  }
}

// Công ty
Table companies {
  id uuid [primary key, default: `gen_random_uuid()`]
  company_name varchar(100) [unique, not null]
  slug varchar(255) [not null, unique]
  address text [not null]
  description text
  website varchar(255)
  logo_url text
  email varchar(255) [unique]
  phone varchar(15)
  tax_code varchar(20)
  review_reason varchar(255) [note: 'Java enum CompanyReviewReason: NEW_COMPANY, INFO_UPDATED']
  status varchar(255) [not null, default: 'PENDING', note: 'Java enum CompanyStatus: PENDING, APPROVED, REJECTED, SUSPENDED']
  is_approved bool [not null, default: false]
  created_at timestamptz [not null, default: `now()`]
  approved_at timestamptz [default: null, note: "Thời điểm Quản trị viên phê duyệt công ty lên hệ thống. NULL nếu chưa từng được duyệt."]
  rejection_reason text
  suspension_reason text
}

// Lịch sử phê duyệt công ty (admin approve/reject/suspend)
Table company_approval_logs {
  id uuid [primary key, default: `gen_random_uuid()`]
  company_id uuid [not null]
  actor_id uuid [not null, note: "Admin thực hiện hành động"]
  old_status varchar(255) [not null, note: 'Java enum CompanyStatus']
  new_status varchar(255) [not null, note: 'Java enum CompanyStatus']
  note text [note: "Lý do từ chối hoặc tạm ngưng, NULL nếu không có"]
  created_at timestamptz [not null, default: `now()`]
}

// Tin tuyển dụng
Table jobs {
  id uuid [primary key, default: `gen_random_uuid()`]
  company_id uuid [not null]
  category_id int [not null]
  title varchar(255) [not null]
  slug varchar(255) [not null, unique]
  description text [not null]
  requirements text
  benefits text
  number_of_openings int [default: 1, note: "Số lượng cần tuyển"]
  salary_min numeric(12,2)
  salary_max numeric(12,2)
  currency varchar(10) [default: 'VND']
  location varchar(255)
  location_types varchar(255) [not null, note: 'Java enum LocationTypes: REMOTE, HYBRID, ONSITE']
  employment_type varchar(255) [not null, note: 'Java enum EmploymentType: FULL_TIME, PART_TIME, CONTRACT']
  experience_level varchar(255) [not null, note: 'Java enum ExperienceLevel: NOT_REQUIRED, INTERN, JUNIOR, MID, SENIOR, LEAD']
  status varchar(255) [not null, default: 'DRAFT', note: 'Java enum JobStatus: DRAFT, PENDING_APPROVAL, ACTIVE, EXPIRED, REJECTED']
  posted_date timestamptz [default: 'now()']
  expiration_date timestamptz
  rejection_reason text
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]
}

Table job_skills {
  job_id uuid
  skill_id int
  indexes {
    (job_id, skill_id) [pk]
  }
}

Table job_category {
  id int [primary key, default: `gen_identity()`]
  name varchar(100) [not null, unique, note: "e.g., Software Engineering, Marketing, Design"]
}

// Đơn ứng tuyển
Table applications {
  id uuid [primary key, default: `gen_random_uuid()`]
  candidate_id uuid [not null]
  job_id uuid [not null]
  status varchar(255) [not null, default: 'PENDING', note: 'Java enum ApplicationStatus: PENDING, REVIEWING, INTERVIEW, HIRED, REJECTED, WITHDRAWN']
  cover_letter text
  resume_url text [note: "Snapshot URL của CV lúc nộp đơn"]
  applied_at timestamptz [not null, default: 'now()']
  indexes {
    (candidate_id, job_id) [unique, note: "Mỗi ứng viên chỉ nộp 1 lần"]
  }
}

// Bảng dùng cho ApplicationTimeline
Table application_status_logs {
  id uuid [primary key, default: `gen_random_uuid()`]
  application_id uuid [not null]
  status varchar(255) [not null, note: 'Java enum ApplicationStatus']
  changed_by uuid [not null, note: "Employer hoặc Admin"]
  changed_at timestamptz [not null, default: `now()`]
  note text
}

// CV/Resume PDF đã upload của ứng viên (1-1 với candidate_details)
Table resumes {
  id uuid [primary key, default: `gen_random_uuid()`]
  candidate_detail_id uuid [not null, unique]
  title varchar(255) [not null, default: '']
  original_file_name varchar(255) [not null, default: '']
  file_path text [not null]
  file_size bigint [not null, default: 0]
  file_type varchar(50) [not null, default: 'application/pdf']
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]
}

// Thông báo
/**
 * Bảng ánh xạ giữa notification_type và entity_id:
 *
 * +----------------------------+---------------------+
 * | Type                       | entity_id Refers To |
 * +----------------------------+---------------------+
 * | APPLICATION_STATUS_CHANGED | applications.id     |
 * | APPLICATION_RECEIVED       | applications.id     |
 * | JOB_STATUS_CHANGED         | jobs.id             |
 * | COMPANY_STATUS_CHANGED     | companies.id        |
 * | COMPANY_PENDING_REVIEW     | companies.id        |
 * | JOB_PENDING_REVIEW         | jobs.id             |
 * +----------------------------+---------------------+
 *
 * Dựa vào giá trị notification_type, hệ thống có thể xác định
 * chính xác entity_id đang tham chiếu đến bản ghi nào.
 *
 * Ví dụ:
 *   type = APPLICATION_STATUS_CHANGED, entity_id = 123
 *   -> Điều hướng đến /applications/123
 *
 *   type = APPLICATION_RECEIVED, entity_id = 456
 *   -> Điều hướng đến /employer/applications/456
 *
 * message: Dùng để hiển thị cho người dùng đọc.
 * entity_id: Dùng để frontend tạo liên kết điều hướng.
 */
Table notifications {
  id uuid [primary key, default: `gen_random_uuid()`]
  user_id uuid [not null]
  type varchar(255) [not null, note: 'Java enum NotificationStatus: APPLICATION_STATUS_CHANGED, APPLICATION_RECEIVED, JOB_STATUS_CHANGED, COMPANY_STATUS_CHANGED, COMPANY_PENDING_REVIEW, JOB_PENDING_REVIEW']
  entity_id uuid [not null]
  message text [not null]
  created_at timestamptz [not null, default: `now()`]
  read_at timestamptz [default: null, note: "Giá trị NULL nghĩa là chưa đọc. Lưu thời gian chính xác khi người dùng mở thông báo để tính số lượng thông báo chưa đọc trên giao diện."]
}

// Chống spam, tạo báo cáo
Table reports {
  id uuid [primary key, default: `gen_random_uuid()`]
  job_id uuid [note: "Target 1: FK to jobs.id"]
  company_id uuid [note: "Target 2: FK to companies.id"]
  reported_by uuid [not null, note: "users.id của người báo cáo"]
  reason varchar(255) [not null, note: 'Java enum ReportReason: SPAM, SCAM, INAPPROPRIATE, OTHER']
  details text [note: "Mô tả chi tiết từ người report"]
  review_notes text [note: "Ghi chú xử lý của admin"]
  status varchar(255) [not null, default: 'PENDING', note: 'Java enum ReportStatus: PENDING, REVIEWED, DISMISSED, RESOLVED']
  reviewed_by uuid [note: "users.id của admin xử lý"]
  reviewed_at timestamptz
  created_at timestamptz [not null, default: `now()`]

  Note: "Yêu cầu CHECK constraint ở DB: (job_id IS NOT NULL AND company_id IS NULL) OR (job_id IS NULL AND company_id IS NOT NULL)"
}

// --- REFERENCES ---
Ref: profiles.user_id - users.id [delete: cascade]
Ref: refresh_tokens.user_id > users.id [delete: cascade]

Ref: candidate_details.profile_id - profiles.user_id [delete: cascade]
Ref: company_employer_details.profile_id - profiles.user_id [delete: cascade]

Ref: company_employer_details.company_id > companies.id [delete: cascade]

Ref: company_approval_logs.company_id > companies.id [delete: cascade]
Ref: company_approval_logs.actor_id > users.id [delete: restrict]

Ref: jobs.company_id > companies.id [delete: cascade]

Ref: candidate_skills.skill_id > skills.id [delete: cascade]
Ref: candidate_skills.candidate_id > candidate_details.profile_id [delete: cascade]

Ref: job_skills.job_id > jobs.id [delete: cascade]
Ref: job_skills.skill_id > skills.id [delete: cascade]

Ref: job_category.id < jobs.category_id [delete: restrict]

Ref: applications.candidate_id > profiles.user_id [delete: cascade]
Ref: applications.job_id > jobs.id [delete: cascade]

Ref: application_status_logs.application_id > applications.id [delete: cascade]
Ref: application_status_logs.changed_by > users.id [delete: restrict]

Ref: notifications.user_id > users.id [delete: cascade]

Ref: resumes.candidate_detail_id > candidate_details.profile_id [delete: cascade]

Ref: reports.reported_by > users.id [delete: restrict]
Ref: reports.job_id > jobs.id [delete: cascade]
Ref: reports.company_id > companies.id [delete: cascade]
Ref: reports.reviewed_by > users.id [delete: set null]
